tests/test128.rael
catch blame(blame("this should explode")) with {
    log "we shouldn't have reached this block"
}
